--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
+    cursor:none;
 }
 .logo.opel{
     position: relative; /* Contenitore di riferimento */
